# mcx

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT-STRUCTURE.md  deploy-frontend.sh  deploy.ps1
.claude/: MEMORY.md
backend/: Cargo.toml  restart.sh
deploy/: deploy-frontend.ps1  deploy_password.py  release.bat
mcx-system/: .env  Cargo.toml  Dockerfile.linux-build  jk_order.py
mcx-system/migrations/: 20240327000000_create_wechat_users.sql  20240328000000_create_addresses.sql  20240330000000_rename_address_user_id.sql  20260331000000_create_goods_tables.sql  20260331000001_create_goods_categories.sql  20260401000001_orders_add_address_id.sql  20260402000000_orders_add_external_order_no.sql  20260402184055_add_payment_password_to_wechat_users.sql  20260407000000_create_subscription_records.sql  20260407000001_create_balance_accounts.sql  20260407000003_insert_recharge_goods.sql  20260416000000_harden_payment_password_and_recharge_idempotency.sql  20260416000001_add_admin_permission_codes.sql
mcx-system/src/: config.rs  error.rs  logging.rs  main.rs  state.rs
mcx-system/src/models/: address.rs  admin_user.rs  category.rs  order.rs  product.rs  subscription.rs
mcx-system/src/routes/: app.rs  middleware.rs  mod.rs
mcx-system/src/routes/admin/: admin_user.rs  auth.rs  category.rs  dashboard.rs  goods.rs  logs.rs  mod.rs  order.rs  permissions.rs  product.rs  subscription.rs  upload.rs  wechat_user.rs
mcx-system/src/routes/mini_app/: address.rs  auth.rs  goods.rs  order.rs  subscription.rs
mcx-system/src/services/: account.rs  jk_pay.rs  mod.rs  oss.rs  secret.rs
(+72 files in other folders)
