[package]
name = "mcx-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "migrate", "chrono"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }

# Crypto for JK payment
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
md-5 = "0.10"
once_cell = "1"
sha2 = "0.10"
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# OSS (Object Storage Service)
aliyun-oss-client = "0.10"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
urlencoding = "2.1"
dotenvy = "0.15"


[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
